Run scripts, shaded packaging, better readme