@@ -1,10 +1,5 @@
 #!/bin/bash
 
 PATH_TO_CODE_BASE=`pwd`
-
-#JAVA_OPTS="-Djava.security.debug=access -Djava.security.manager -Djava.security.policy=/$PATH_TO_CODE_BASE/java.policy -Djava.rmi.server.useCodebaseOnly=false"	
-
-MAIN_CLASS="ar.edu.itba.pod.server.Server"
-
-
-java  $JAVA_OPTS -cp 'lib/jars/*' $MAIN_CLASS $*
+MAIN_JAR="server/target/tpe2-g2-server-2024.Q1.jar"
+java -jar "$PATH_TO_CODE_BASE/../../../../../$MAIN_JAR"
